--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Evan-CSE/Crypto-Test-Project",
+  "homepage": "https://evan-cse.github.io/Crypto-Test-Project/",
   "name": "crypto-project",
   "version": "0.1.0",
   "private": true,
